# CascadeNet-

./: .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json
ai-backend/: README.md  pyproject.toml
ai-backend/artifacts/: backend_snapshot.json  live_webcam_obstruction.json  obstruction_evaluation.json
ai-backend/cascadenet_ai/: __init__.py  live_webcam.py  run_demo.py  synthetic.py  synthetic_video.py  types.py
ai-backend/cascadenet_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ai-backend/cascadenet_ai/models/: pinn.py  st_gat.py
ai-backend/cascadenet_ai/pipelines/: audio.py  digital_twin.py  live_obstruction.py  shared.py  slam.py  vision.py
ai-backend/scripts/: evaluate_obstruction_detector.py  generate_sample_rack_video.py
app/: globals.css  layout.tsx
app/api/dashboard/: route.ts
app/mock-demo/: page.tsx
components/: dashboard.tsx
docs/: AI_ARCHITECTURE.md  DEMO_SCRIPT.md
lib/: demo-data.ts  engine.ts  types.ts
scripts/: build_mock_gif.py  build_mock_mp4.py  capture-screenshots.mjs  render-mock-video.mjs
