[project]
name = "cascadenet-ai"
version = "0.1.0"
description = "Research backend for CascadeNet multi-modal data center monitoring"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
]

[project.optional-dependencies]
full = [
  "opencv-python>=4.10",
  "torch>=2.2",
  "torchaudio>=2.2",
  "scipy>=1.12",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cascadenet_ai*"]
